<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.monolite.ejemplocontacto.DisplayContactActivity">
    <TextView
        android:id="@+id/tv_name_value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/tv_birthdate_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_label_birthdate" />
        <TextView
            android:id="@+id/tv_birthdate_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/tv_phone_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_label_phone" />
        <TextView
            android:id="@+id/tv_phone_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/tv_mail_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_label_mail" />
        <TextView
            android:id="@+id/tv_mail_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/tv_description_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_label_description" />
        <TextView
            android:id="@+id/tv_description_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <Button
        android:id="@+id/bt_edit_contact"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bt_text_edit"
        android:onClick="editClick"/>

</LinearLayout>
